<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buy_guess_share_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/ruyicai_titlebar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/chenggong"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:text="@string/buy_ruyi_guess_create_group_success"
        android:textColor="#009000"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/buy_ruyi_guess_invite_friend"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/share_wx"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="#E2E2E2"
        android:text="@string/buy_ruyi_guess_wx_invite_friend" />

    <Button
        android:id="@+id/share_sms"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#E2E2E2"
        android:text="@string/buy_ruyi_guess_contacts_invite_friend" />
    
    <include layout="@layout/popwindow_layout"/>

</LinearLayout>