<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/ruyicai_titlebar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ump_icon_right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/buy_ruyi_guess_create_group_success"
            android:textColor="@color/green_jc"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:text="@string/buy_ruyi_guess_invite_friend"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <Button
        android:id="@+id/guyi_guess_wx_invite_friend"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/join_info_btn_selecter"
        android:text="@string/buy_ruyi_guess_wx_invite_friend"
        android:textSize="18sp" />

    <Button
        android:id="@+id/guyi_guess_contacts_invite_friend"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="20dip"
        android:background="@drawable/join_info_btn_selecter"
        android:text="@string/buy_ruyi_guess_contacts_invite_friend"
        android:textSize="18sp" />
    
    <include layout="@layout/popwindow_layout"/>

</LinearLayout>